--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-example",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.5.x"
+    "express": "2.5.x",
+    "jade": "=0.19.0",
+    "connect-assets": "=2.1.6"
   },
   "engines": {
     "node": "0.6.x"
