--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "2.5.x",
     "jade": "=0.19.0",
-    "connect-assets": "=2.1.6"
+    "connect-assets": "=2.1.6",
+    "mongodb": "1.2.0"
   },
   "engines": {
     "node": "0.6.x"
