--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "2.5.x",
     "jade": "=0.19.0",
     "connect-assets": "=2.1.6",
-    "mongodb": "1.2.0"
+    "mongodb": "1.2.0",
+    "request": "2.12.0"
   },
   "engines": {
     "node": "0.6.x"
