--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "node-example",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.5.x",
+    "express": "3.x",
     "jade": "=0.19.0",
     "connect-assets": "=2.1.6",
     "mongodb": "1.2.0",
-    "request": "2.12.0"
+    "request": "2.12.0",
+    "stylus": "*",
+    "nib": "*"
   },
   "engines": {
     "node": "0.6.x"
