--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-example",
-  "version": "0.0.1",
+  "name": "BibleCommunityChurch",
+  "version": "0.0.2",
   "dependencies": {
-    "express": "3.x",
-    "jade": "=0.19.0",
+    "express": "~3.3.7",
+    "jade": "~0.35.0",
     "connect-assets": "=2.1.6",
     "mongodb": "1.2.0",
     "request": "2.12.0",
@@ -11,6 +11,6 @@
     "nib": "*"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "0.10.x"
   }
 }
