--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "BibleCommunityChurch",
-  "version": "0.0.2",
-  "dependencies": {
-    "express": "~3.3.7",
-    "jade": "~0.35.0",
-    "connect-assets": "=2.1.6",
-    "mongodb": "1.2.0",
-    "request": "2.12.0",
-    "stylus": "*",
-    "nib": "*",
-    "underscore": "*"
-  },
-  "engines": {
-    "node": "0.10.x"
-  }
+    "name": "BibleCommunityChurch",
+    "version": "0.0.2",
+    "dependencies": {
+        "express": "~3.3.7",
+        "jade": "~0.35.0",
+        "connect-assets": "=2.1.6",
+        "mongodb": "1.2.0",
+        "request": "2.12.0",
+        "stylus": "*",
+        "underscore": "*",
+        "supervisor": "*"
+    },
+    "engines": {
+        "node": "0.10.x"
+    }
 }
