--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "request": "2.12.0",
         "stylus": "*",
         "underscore": "*",
-        "supervisor": "*"
+        "supervisor": "*",
+        "knox": "*",
+        "tape": "*"
     },
     "engines": {
         "node": "0.10.x"
